backoffice(ui): align abstract displays *ref: https://github.com/cern-sis/issues-inspire/issues/1492

--- a/ui/src/backoffice/common/components/ResultItem/ResultItem.less
+++ b/ui/src/backoffice/common/components/ResultItem/ResultItem.less
@@ -79,11 +79,24 @@
     color: #777;
   }
 
-  .filtered-accept-core-keyword{color: #16a085;}
-  .filtered-accept-keyword{color:#f39c12;}
+  .filtered-accept-core-keyword {
+    color: #16a085;
+  }
+  .filtered-accept-keyword {
+    color: #f39c12;
+  }
 
-  .text-core { color: #16a085 }
-  .text-non-core { color: #f39c12; }
-  .text-rejected  { color: #e74c3c; }
+  .text-core {
+    color: #16a085;
+  }
+  .text-non-core {
+    color: #f39c12;
+  }
+  .text-rejected {
+    color: #e74c3c;
+  }
 
+  .show-abstract {
+    width: 100%;
+  }
 }
